Reworked stylesheet to use relative sizes wherever possible
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@432 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -1,87 +1,83 @@
 body { background-color: white; color: #333; }
-body, p, ol, ul, td { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 13px; line-height: 18px; }
+body, p, ol, ul, td { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 100%; line-height: 1.3em; }
 
-#Container { float: none; margin: 0 auto; text-align: center; }
-#Content { margin: 0; padding: 5px; text-align: left; border-top: none; float: left; }
+#Container { float: none; margin: 0 15%; text-align: center; }
+#Content { margin: 0; padding: 0.3em; text-align: left; border-top: none; float: left; width: 100%; }
 
 a { color: black; }
 a:visited { color: #666; }
 a:hover { color: white; background-color:#000; }
 
 h1, h2, h3 { color: #333; font-family: georgia, verdana, sans-serif; }
-h1 { font-size: 28px }
-h2 { font-size: 19px }
-h3 { font-size: 16px }
+h1 { font-size: 200%; }
+h2 { font-size: 130%; }
+h3 { font-size: 120%; }
 
-h1#pageName { margin: 5px 0 0; padding: 0; line-height: 28px; }
-h1#pageName small { color: #444; line-height: 10px; font-size: 10px; padding: 0; }
+h1#pageName { margin: 0.2em 0 0; line-height: 1em; padding: 0; }
+h1#pageName small { color: #444; font-size: 35%; line-height: 1em; padding: 0; }
 
-a.nav, a.nav:link, a.nav:visited { color: #000; }
-a.nav:hover { color: #fff; background-color:#000; }
+a.nav, a.nav:link, a.nav:visited { color: black; }
+a.nav:hover { color: white; background-color: black; }
+
+table { border:  double black; border-collapse: collapse; }
+td { border: thin solid grey; }
+
+li { margin-bottom: 0.5em; }
 
 .newWikiWord { background-color: #BFBFBF; }
 .newWikiWord a:hover { background-color: white; }
 
-li { margin-bottom: 7px }
+form#navigationSearchForm { display: inline; }
+form#navigationSearchForm input { font-size: 80%; }
 
-.navigation { margin-top: 5px; font-size : 12px; color: #999; }
-.navigation a:hover { color: #fff; background-color:#000; }
-.navigation a { font-size: 11px; color: black; font-weight: bold; }
-.navigation small a { font-weight: normal; font-size: 11px; }
-  
-.navOn{ font-size: 11px; color: #444; font-weight: bold; text-decoration: none; }
+.navigation { margin-top: 0.3em; font-size : 90%; color: #999; }
+.navigation a:hover { color: white; background-color: black; text-decoration: none; }
+.navigation a { font-size: 80%; color: black; font-weight: bold; }
+.navigation small a { font-weight: normal; font-size: 90%; }
 
-.help { font-family: verdana, arial, helvetica, sans-serif; font-size: 11px; }
+.navOn { font-size: 11px; color: #444; font-weight: bold; text-decoration: none; }
 
-.inputBox { font-family: verdana, arial, helvetica, sans-serif; font-size: 11px; background-color: #eee; padding: 5px; margin-bottom: 20px; }
+.help { font-family: verdana, arial, helvetica, sans-serif; font-size: 70%; }
 
-blockquote { display: block; margin: 0px 0px 20px 0px; padding: 0px 30px; font-size:11px; line-height:17px; font-style: italic; }
+.inputBox { font-family: verdana, arial, helvetica, sans-serif; font-size: 80%; background-color: #EEE; padding: 0.3em; margin-bottom: 1.5em; }
 
-pre { background-color: #eee; padding: 10px; font-size: 11px; overflow: auto; }
+blockquote { display: block; font-size: 90%; margin: 0 0 1.5em 0; padding: 0 2.5em; line-height: 1.5em; font-style: italic; }
 
-ol.setup { font-size: 19px; font-family: georgia, verdana, sans-serif; padding-left: 25px; }
-ol.setup li { margin-bottom: 20px }
+pre { font-size: 90%; padding: 1em; overflow: auto; background-color: #DDD; }
 
-.byline { font-size: 10px; font-style: italic; margin-bottom: 10px; color: #999; }
+ol.setup { font-size: 110%; font-family: georgia, verdana, sans-serif; padding-left: 1.5em; margin-top: 1em; }
 
-.references { font-size: 10px; }
+.byline { padding-top: 1em; font-size: 60%; font-style: italic; margin-bottom: 1em; color: #999; }
 
 .diffdel, del.diffmod { background: pink; }
 .diffins, ins.diffmod { background: lightgreen; }
 
-#footer { height: 14px; padding: .25em 0; }
-#footer p { font-size: 10px; color: gray; font-style: italic; margin: 0; float: right; text-align: right; }
+#footer { font-size: 60%; line-height: 1.2em; color: #999; font-style: italic; text-align: right; padding-top: 2em; }
+#footer a:link, #footer a:visited { color: #888; font-style: italic; }
 
 div.inputFieldWithPrompt { margin: 0.75em 0; }
 
-
-div.errorExplanation { color: #900; font-style: italic; font-weight: bold; margin: 1.5em 0; padding: 1em; background: #FFA; }
+div.errorExplanation { color: #900; background-color: #FFA; font-style: italic; font-weight: bold; margin: 1.5em 0; padding: 1em; width: 100%; }
 div.errorExplanation h2 { display: none; }
 div.errorExplanation p { padding: 0; margin: 0; border: none; }
 div.errorExplanation ul { padding: 0; margin: 0.5em 0 0 2em; border: none; }
 div.errorExplanation li { padding 0; margin: 0; border: none; }
 div.fieldWithErrors input { border: 1px solid #900; }
+div.info { color: #060; background-color: #BFBFBF; padding: 0.5em; margin-top: 0.5em; font-weight: bold; width: 100%; }
 
+div#MarkupHelp { float: right; width: 25%; margin-top: 0.5em; }
+div#MarkupHelp table { margin-bottom: 0; border-top: 3px solid #999; border-left: 3px solid #999; 
+    border-right: 3px solid #BBB; border-bottom: 3px solid #BBB}
+div#MarkupHelp td { font-size: 80%; padding: 0.2em; margin: 0; border: 1px solid #999; border-width: 1px 0 1px 0; 
+  vertical-align: top; white-space: nowrap; }
+div#MarkupHelp td.arrow { padding-right: 5px; padding: 0 0.75em; color: #999; }
+div#MarkupHelp h3 { font-size: 90%; font-weight: bold; font-weight: normal; margin: 0 0 5px 0; padding: 5px 0 0 0; }
+div#MarkupHelp p { font-size: 70%; }
 
+div.rightHandSide { float: right; width: 25%; margin-left: 0.7em; padding-left: 1.5em; border-left: 1px dotted #ccc; font-size: 80%; }
 
-#info { color: #060; font-style: italic; width: 600px; }
-#TextileHelp table { margin-bottom: 0; }
-#TextileHelp table+h3 { margin-top: 11px; }
-#TextileHelp table td { font-size: 11px; padding: 3px; vertical-align: top; border-top: 1px dotted #ccc; }
-#TextileHelp table td.arrow { padding-right: 5px; padding-left: 10px; color: #999; }
-#TextileHelp table td.label { font-weight: bold; white-space: nowrap; font-size: 10px; padding-right: 15px; color: #000; }
-#TextileHelp h3 { font-size: 11px; font-weight: bold; font-weight: normal; margin: 0 0 5px 0; padding: 5px 0 0 0; }
-#TextileHelp p { font-size: 10px; }
-
-.rightHandSide { float: right; width: 147px; margin-left: 10px; padding-left: 20px; border-left: 1px dotted #ccc; }
-.rightHandSide p { font-size: 10px; }
-
-.newsList { margin-top: 20px; }
-.newsList p { margin-bottom:30px; }
-
-table { border:  double black; border-collapse: collapse; }
-td { border:thin solid grey; }
-.byline { padding-top: 15px; }
+.newsList { margin-top: 1.5em; }
+.newsList p { margin-bottom: 2.5em; }
 
 /* Affects the display of "category: ..." */
-.property { color: grey; font-size: 10px; }
+.property { color: #999; font-size: 80%; }
