Changes in RHTML templates to go wioth the earlier commit
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@433 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/create_system.rhtml
+++ b/app/views/admin/create_system.rhtml
@@ -31,9 +31,9 @@
   <li>
     <h2 style="margin-bottom: 3px">Password for creating and changing webs</h2>
     <div class="help">
-      Administrative access allows you to make new webs and change existing ones.<br/>
-      Everyone with this password will be able to do this, so pick it carefully.
+      Administrative access allows you to make new webs and change existing ones.
     </div>
+    <div class="help"><em>Everyone with this password will be able to do this, so pick it carefully!</em></div>
     <div class="inputBox">
       Password: <input type="password" id="password" name="password" />
       &nbsp;&nbsp;
