accept--charset attribute added to all forms
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@462 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/create_system.rhtml
+++ b/app/views/admin/create_system.rhtml
@@ -6,8 +6,9 @@
   you'll need to do a brief one-time setup.
 </p>
 
-<%= form_tag({ :controller => 'admin', :action => 'create_system'},
-             {'id' => 'setup', 'method' => 'post', 'onSubmit' => 'return validateSetup()'})
+<%= form_tag({ :controller => 'admin', :action => 'create_system' },
+             { 'id' => 'setup', 'method' => 'post', 'onSubmit' => 'return validateSetup()', 
+               'accept-charset' => 'utf-8' })
 %>
 <ol class="setup">
   <li>
