--- a/app/views/file/file.rhtml
+++ b/app/views/file/file.rhtml
@@ -5,7 +5,8 @@
 
 <%= error_messages_for 'file' %>
 
-<%= form_tag({:controller => 'file', :web => @web_name, :action => 'file'}, {:multipart => true}) %>
+<%= form_tag({ :controller => 'file', :web => @web_name, :action => 'file' }, 
+        { 'multipart' => true , 'accept-charset' => 'utf-8' }) %>
   <%= hidden_field 'file', 'file_name' %>
   <div class="inputFieldWithPrompt">
     <b>Content of <%= h @file_name %> to upload <small>(required)</small>:</b>
