--- a/app/views/file/import.rhtml
+++ b/app/views/file/import.rhtml
@@ -1,5 +1,5 @@
 <p>
-<%= form_tag({}, {:multipart => true}) %>
+<%= form_tag({}, { 'multipart' => true, 'accept-charset' => 'utf-8' }) %>
   <p>
     File to upload:
     <br/>
