--- a/app/views/wiki/rollback.rhtml
+++ b/app/views/wiki/rollback.rhtml
@@ -7,7 +7,8 @@
 <%= "<p style='color:red'>Please correct the error that caused this error in rendering:<br/><small>#{@params["msg"]}</small></p>" if @params["msg"] %>
 
 <%= form_tag({:web => @web.address, :action => 'save', :id => @page.name},
-      {:id => 'editForm', :method => 'post', :onSubmit => 'cleanAuthorName();'})
+      { :id => 'editForm', :method => 'post', :onSubmit => 'cleanAuthorName();', 
+        'accept-charset' => 'utf-8' })
 %>
 <p>
   <textarea name="content" style="font-size: 12px; width: 450px; height: 500px"><%= @revision.content %></textarea>
